<resources>
    <string name="app_name">szamologep2</string>
    <string name="c">C</string>
    <string name="del">Del</string>
    <string name="eq">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="times">*</string>
    <string name="div">/</string>
    <string name="pow">^</string>
    <string name="sqrt">sqrt</string>
    <string name="dot">.</string>

    <color name="gray">#9F9F9F</color>
</resources>
