<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/div"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/roundedbutton"
        android:foregroundTint="#FFFFFF"
        android:text="@string/div"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sqrt"
        app:layout_constraintTop_toBottomOf="@+id/minus" />

    <Button
        android:id="@+id/seven"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/roundedbutton"
        android:foregroundTint="#FFFFFF"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintEnd_toStartOf="@+id/eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/six"
        app:layout_constraintTop_toBottomOf="@+id/three" />

    <Button
        android:id="@+id/minus"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/roundedbutton"
        android:foregroundTint="#FFFFFF"
        android:text="@string/minus"
        app:layout_constraintBottom_toTopOf="@+id/div"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/zero"
        app:layout_constraintTop_toBottomOf="@+id/eight" />

    <Button
        android:id="@+id/pow"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/roundedbutton"
        android:foregroundTint="#FFFFFF"
        android:text="@string/pow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sqrt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/times"
        app:layout_constraintTop_toBottomOf="@+id/nine" />

    <Button
        android:id="@+id/six"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/roundedbutton"
        android:foregroundTint="#FFFFFF"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@+id/nine"
        app:layout_constraintEnd_toStartOf="@+id/seven"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/two" />

    <Button
        android:id="@+id/eight"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/roundedbutton"
        android:foregroundTint="#FFFFFF"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@+id/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toBottomOf="@+id/four" />

    <Button
        android:id="@+id/one"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/roundedbutton"
        android:foregroundTint="#FFFFFF"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/five"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dot" />

    <Button
        android:id="@+id/plus"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/roundedbutton"
        android:foregroundTint="#FFFFFF"
        android:text="@string/plus"
        app:layout_constraintBottom_toTopOf="@+id/times"
        app:layout_constraintEnd_toStartOf="@+id/nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/five" />

    <Button
        android:id="@+id/nine"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/roundedbutton"
        android:foregroundTint="#FFFFFF"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@+id/pow"
        app:layout_constraintEnd_toStartOf="@+id/zero"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plus"
        app:layout_constraintTop_toBottomOf="@+id/six" />

    <Button
        android:id="@+id/times"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/roundedbutton"
        android:foregroundTint="#FFFFFF"
        android:text="@string/times"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pow"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus" />

    <Button
        android:id="@+id/five"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/roundedbutton"
        android:foregroundTint="#FFFFFF"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@+id/plus"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one" />

    <Button
        android:id="@+id/two"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/roundedbutton"
        android:foregroundTint="#FFFFFF"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@+id/six"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/c" />

    <Button
        android:id="@+id/four"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/roundedbutton"
        android:foregroundTint="#FFFFFF"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/eight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/three"
        app:layout_constraintTop_toBottomOf="@+id/eq" />

    <Button
        android:id="@+id/sqrt"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/roundedbutton"
        android:foregroundTint="#FFFFFF"
        android:text="@string/sqrt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/div"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pow"
        app:layout_constraintTop_toBottomOf="@+id/zero" />

    <Button
        android:id="@+id/three"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/roundedbutton"
        android:foregroundTint="#FFFFFF"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@+id/seven"
        app:layout_constraintEnd_toStartOf="@+id/four"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/del" />

    <Button
        android:id="@+id/zero"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/roundedbutton"
        android:foregroundTint="#FFFFFF"
        android:text="@string/zero"
        app:layout_constraintBottom_toTopOf="@+id/sqrt"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nine"
        app:layout_constraintTop_toBottomOf="@+id/seven" />

    <Button
        android:id="@+id/c"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/roundedbutton"
        android:foregroundTint="#FFFFFF"
        android:text="@string/c"
        app:layout_constraintBottom_toTopOf="@+id/two"
        app:layout_constraintEnd_toStartOf="@+id/del"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dot"
        app:layout_constraintTop_toBottomOf="@+id/res" />

    <Button
        android:id="@+id/dot"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/roundedbutton"
        android:foregroundTint="#FFFFFF"
        android:text="@string/dot"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintEnd_toStartOf="@+id/c"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/res" />

    <Button
        android:id="@+id/del"
        style="@android:style/Widget.Material.Light.Button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@android:drawable/ic_input_delete"
        android:foregroundTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/three"
        app:layout_constraintEnd_toStartOf="@+id/eq"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/c"
        app:layout_constraintTop_toBottomOf="@+id/res" />

    <Button
        android:id="@+id/eq"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/roundedbutton"
        android:foregroundTint="#FFFFFF"
        android:text="@string/eq"
        app:layout_constraintBottom_toTopOf="@+id/four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/del"
        app:layout_constraintTop_toBottomOf="@+id/res" />

    <TextView
        android:id="@+id/res"
        android:layout_width="348dp"
        android:layout_height="85dp"
        android:layout_marginTop="24dp"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>